--- a/PageTable.org
+++ b/PageTable.org
@@ -12,7 +12,7 @@
 
 | .. funx     | page title              | Blog Sty | Text    | SEO  | Short URL     | wirefram        | PDF | ex links | inlinks  | t-debt | pp?  | Background   |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
 |             |                         |          | H T A C |      |               |                 |     |          |          |        |      |              |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
-| ~0          | Home                    |          | +       | -    |               |                 |     |          |          |        | -    | + blu polar  |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
+| ~0          | Home                    | -        | - + - + | -    |               |                 |     |          |          |        | -    | + blu polar  |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
 | ~1          | legal                   |          | +       |      |               |                 |     |          |          |        |      | + sofa       |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
 | ~1          | Contact                 |          | -       |      |               |                 |     |          |          |        |      | + sofa       |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
 | ~1          | Build xr                |          |         |      |               |                 |     |          |          |        |      |              |   |   |   |      |    |    |            |        |    |          |          |        |      |   |   |   |   |   |
