--- a/Pages/0Homepage [DONE]/homepage_goLIVE.org
+++ b/Pages/0Homepage [DONE]/homepage_goLIVE.org
@@ -1,7 +1,11 @@
  
+** Tag
 "Dream Awake" 
  
-We provide XR Media solutions for business. Our work includes sourcing development, production management, and market entry.
+** Content 
+We provide XR Media solutions for businesses. 
+
+Our work includes design, development and deployment. 
 
 
 
