updated seo and text variables

--- a/0admin/seotitles.org
+++ b/0admin/seotitles.org
@@ -3,12 +3,29 @@ SEO Titles: META DESCRIPTIONS
 ** Home:
 Nova XR Media provides virtual reality and augmented reality solutions for businesses to extend reality, innovate media, produce XR and make xr content
 
+** Legal
+XR Privacy policy, save the internet, XR legal, xr law, XR terms and agreement
+
+** Contact
+contact nova xr, find virtual reality studio, locate xr, searching xr production services
+
+** Build XR
+build xr, create xr, develop xr, make xr, produce xr, design xr, architect xr, code xr
+
+** Login
+xr login, xr membership, xr vip, xr enter, xr access, xr production
+
 ** Solutions:
 Nova XR Media let's you purchase virtual reality software development to extend reality (XR), innovate new media, produce XR and easily make virtual reality experinces
 
 ** Products
-
 XR Products, XR interfaces, How to design virtual reality interfaces, xr media interface, how to design xr, live xr events, xr software
+
+** Consultation
+access to advanced technologies, learn about xr, xr media consultation, advising, information, encyclopedia, dictionary 
+
+** Publications
+XR financial stratgy, media production roi, financial resturn, money, investment, gross profit, net gain
 
 ** Architecture
 
