--- a/Pages/01Bottom Bar [DONE]/Legal/legaltext_goLIVE.org
+++ b/Pages/01Bottom Bar [DONE]/Legal/legaltext_goLIVE.org
@@ -1,23 +1,29 @@
 
-* Terms and Conditions of Use
+
+* Header
+Privacy Policy
+
+* Content
+
+** Terms and Conditions of Use
 
 We maintain this site as a resource and communication portal. Terms of Service apply to anyone browsing the website. Accessing the site is acceptance without limitation or qualification of the following Terms and Conditions. If you do NOT accept the Terms and Conditions, please discontinue your use of this Site.
 
 
-* Privacy Policy
+** Privacy Policy
 
 We use basic Google Analytics to improve our services:
 
 Opt-out of Google Analytics: https://tools.google.com/dlpage/gaoptout/
 
 
-* Save the Internet
+** Save the Internet
 
 The internet is subject to change under proposed US policy that would compromise /Net Neutrality/.   We strongly support a free and open internet, which is at stake. Read more at SaveTheInternet.com https://www.savetheinternet.com/net-neutrality-what-you-need-know-now
 
 /Net Neutrality/ the principle that Internet service providers should enable access to all content and applications regardless of the source and without favoring or blocking particular products or websites.
 
-* Exhaustive Legal 
+** Exhaustive Legal 
 
 
 This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
@@ -69,7 +75,7 @@ You can choose to have your computer warn you each time a cookie is being sent, 
 
 If you turn cookies off, Some of the features that make your site experience more efficient may not function properly.Some of the features that make your site experience more efficient and may not function properly.
 
-** Third-party disclosure
+*** Third-party disclosure
 
 Do we disclose nothing to third parties.   
 
@@ -102,13 +108,13 @@ You will be notified of any Privacy Policy changes:
 Can change your personal information:
       • By logging in to your account
 
-*** How does our site handle Do Not Track signals?
+***** How does our site handle Do Not Track signals?
 We honor Do Not Track signals and Do Not Track, plant cookies, or use advertising when a Do Not Track (DNT) browser mechanism is in place.
 
 Does our site allow third-party behavioral tracking?
 It's also important to note that we do not allow third-party behavioral tracking
 
-** COPPA (Children Online Privacy Protection Act)
+*** COPPA (Children Online Privacy Protection Act)
 
 When it comes to the collection of personal information from children under the age of 13 years old, the Children's Online Privacy Protection Act (COPPA) puts parents in control. The Federal Trade Commission, United States' consumer protection agency, enforces the COPPA Rule, which spells out what operators of websites and online services must do to protect children's privacy and safety online.
 
