consult intro and text variables

--- a/0admin/seotitles.org
+++ b/0admin/seotitles.org
@@ -223,6 +223,9 @@ virtual reality business strategy, xr financial strategy, vr return on investmen
 
 ** training
 
+leanr, to install hardware, virtual reality lessons, tutor, learning, education, boot camp, vr, xr theory, software, programing
+
+
 ** market resear
 
 ** interfaces
