--- a/Pages/1Solutions/solutions_abstract.org
+++ b/Pages/1Solutions/solutions_abstract.org
@@ -1,2 +1,9 @@
 
-We provide XR solutions to businesses.  Our work includes consultancy, production, and publishing.  We advise on advanced technologies, source development and manage project exectuion.   Virtual reality and related technologies are rapidly evolving - we keep yuo ahead of the curve.
+* Header
+
+Solutions
+
+* Abstract
+
+We provide XR solutions to businesses - advising on advanced technologies, sourcing development and managing project exectuion.   
+
