--- a/Pages/1Solutions/3Publications/financial strats/finstratsintro.org
+++ b/Pages/1Solutions/3Publications/financial strats/finstratsintro.org
@@ -9,3 +9,7 @@
 **** Dev Con
 **** Music Streaming
 **** Department Development
+ sales grid (JM)
+- Goal tracking (JM) 
+- bug reports (TB)
+- accounting (TB)
